<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Auth">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <EditText
            android:id="@+id/input_login"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:gravity="center_horizontal"
            android:inputType="text"
            android:hint="@string/auth_label_login"/>
        <EditText
            android:id="@+id/input_password"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:gravity="center_horizontal"
            android:inputType="textPassword"
            android:hint="@string/auth_label_password"/>
        <Button
            android:id="@+id/button_auth"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:textSize="20sp"
            android:text="@string/auth_button_log_in"/>
        <Button
            android:id="@+id/button_register"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:textSize="20sp"
            android:text="@string/auth_button_registration"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>