<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RoomSettings">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/input_roomName"
                android:layout_width="240dp"
                android:layout_height="match_parent"/>
            <Button
                android:id="@+id/button_editRoomName"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="4dp"
                android:layout_marginVertical="6dp"
                android:text="@string/room_settings_button_edit_room_name"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:text="@string/room_settings_label_users_list"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/input_newUser"
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:hint="@string/room_settings_input_new_user"/>
            <Button
                android:id="@+id/button_addUser"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="4dp"
                android:layout_marginVertical="6dp"
                android:text="@string/room_settings_button_add_user"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_users"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:isScrollContainer="true"
            android:orientation="vertical">
        </LinearLayout>
        <Button
            android:id="@+id/button_deleteRoom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/room_settings_button_delete_room"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>