<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Room">
    <RelativeLayout
        android:id="@+id/room_layout_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">
        <LinearLayout
            android:id="@+id/room_layout_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:weightSum="3">
            <TextView
                android:id="@+id/label_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="32sp"
                android:textStyle="bold"
                tools:text="@string/room_label_name_room"/>
            <Button
                android:id="@+id/button_settings"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_marginHorizontal="4dp"
                android:layout_marginVertical="10dp"
                android:text="@string/room_button_room_settings"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/room_layout_statuses"
            android:layout_below="@+id/room_layout_header"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:weightSum="3">
            <Button
                android:id="@+id/button_todo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:text="@string/room_button_todo"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="12dp"
                android:background="@android:color/black" />
            <Button
                android:id="@+id/button_doing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:text="@string/room_button_doing"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="12dp"
                android:background="@android:color/black" />
            <Button
                android:id="@+id/button_done"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:text="@string/room_button_done"/>
        </LinearLayout>
        <EditText
            android:id="@+id/input_newTask"
            android:layout_below="@+id/room_layout_statuses"
            android:layout_alignBaseline="@+id/button_addTask"
            android:layout_width="240dp"
            android:layout_height="48dp"
            android:inputType="text"
            android:hint="@string/room_label_name_new_task"/>
        <Button
            android:id="@+id/button_addTask"
            android:layout_below="@+id/room_layout_statuses"
            android:layout_alignParentEnd="true"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            android:text="@string/room_button_add_new_task"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/layout_tasks"
            android:layout_below="@+id/button_addTask"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.recyclerview.widget.RecyclerView>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>