<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskChange">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="4dp">
        <EditText
            android:id="@+id/input_taskHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textSize="40sp"
            android:hint="@string/task_change_input_task_head"/>
        <RelativeLayout
            android:id="@+id/layout_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_taskHead"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_prev_status"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:background="@drawable/baseline_arrow_left_24"/>
            <TextView
                android:id="@+id/label_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/button_prev_status"
                android:layout_toStartOf="@+id/button_next_status"
                android:gravity="center"
                android:textSize="36sp"
                tools:text="Делается"/>
            <Button
                android:id="@+id/button_next_status"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/baseline_arrow_right_24"/>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/layout_deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_status"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                tools:text="Дедлайн:"/>
            <EditText
                android:id="@+id/input_deadline"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:textSize="24sp"
                tools:text="12.04.2024"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_taskBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_deadline"
            android:layout_above="@+id/layout_buttons"
            android:isScrollContainer="true"
            android:orientation="vertical">
            <EditText
                android:id="@+id/input_taskBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:inputType="textMultiLine"
                android:hint="@string/task_change_input_task_body"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal"
            android:weightSum="2">
            <Button
                android:id="@+id/button_saveTask"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:text="@string/task_change_button_save"/>
            <Button
                android:id="@+id/button_cancel"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:text="@string/task_change_button_cancel"/>
        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>